// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner component Should render correctly if isImportant 1`] = `
<div
  className="u-bdrs-4 u-p-1-half u-bg-paleGrey u-bg-chablis"
>
  <SubTitle
    className="u-pomegranate"
    ellipsis={false}
    tag="div"
  >
    Basic banner
  </SubTitle>
  <Text
    className="u-mv-1"
    ellipsis={false}
    tag="div"
  >
    Basic banner description here
  </Text>
</div>
`;

exports[`Banner component Should render correctly with button if actionButton provided 1`] = `
<div
  className="u-bdrs-4 u-p-1-half u-bg-paleGrey"
>
  <SubTitle
    className=""
    ellipsis={false}
    tag="div"
  >
    Basic banner
  </SubTitle>
  <Text
    className="u-mv-1"
    ellipsis={false}
    tag="div"
  >
    Basic banner description here
  </Text>
  <button>
    My CTA
  </button>
</div>
`;

exports[`Banner component Should render correctly without button if no button props provided 1`] = `
<div
  className="u-bdrs-4 u-p-1-half u-bg-paleGrey"
>
  <SubTitle
    className=""
    ellipsis={false}
    tag="div"
  >
    Basic banner
  </SubTitle>
  <Text
    className="u-mv-1"
    ellipsis={false}
    tag="div"
  >
    Basic banner description here
  </Text>
</div>
`;
